Opened 4 years ago

Closed 3 years ago

#17118 closed bug (fixed)

webkit uses wrong timezone in file display

Reported by: nephele Owned by: pulkomandy
Priority: normal Milestone: R1/beta4
Component: Kits/Web Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I noticed that gerrit changes are shown to me as happening two hours in the past. I suspect they are shown in UTC, and I am UTC+2.

I have created a test file, And opened the directory with HaikuLauncher

touch /boot/home/wktest
HaikuLauncher file:/boot/home/

The displayed timestamp was Today, 3:53 PM, the computer clock showed 17:53. This leads me to suspect it doesn't know the timezone, and perhaps other locale settings (24H time?)

Tested on hrev55257 with haikuwebkit 1.8.3-dev [ bfc4c028ec945bd0ab2e16bde57943ab81af0a9b]
My formating settings is set to German, my language to english (second esperanto), and my timezone to Germany

Could be related to https://dev.haiku-os.org/ticket/17111

Change History (1)

comment:1 by pulkomandy, 3 years ago

Milestone: UnscheduledR1/beta4
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.