Fix mixup of local and UTC time in FTP/local file listing

The date extracted from the FTP listing is compared with the local time
and displayed to the user. Clearly it should be in the local timezone
and not in UTC.

Fixes #17118.